<resources>
    <string name="app_name">IntersvyazTestApp</string>
    <string name="detailed_description">Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, </string>
    <string name="short_description">Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick, Ded tbl Krolick,</string>
    <string name="hint_search">Search films...</string>
    <string name="b_search">Search</string>
    <string name="tv_favs_title">Favourites</string>
    <string name="dialog_week">Week</string>
    <string name="dialog_day">Day</string>
    <string name="Dialog_hour">Hour</string>
    <string name="dialog_quarter_hour">15 min</string>
    <string name="dialog_fs">5 secs</string>
    <string name="dialog_minute">Minute</string>
</resources>