<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="Select time period"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_qh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_quarter_hour" />

        <Button
            android:id="@+id/b_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dialog_hour" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_day" />

        <Button
            android:id="@+id/b_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_week" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/b_fs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#b4b"
            android:text="@string/dialog_fs" />

        <Button
            android:id="@+id/b_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#b4b"
            android:text="@string/dialog_minute" />

    </LinearLayout>

</LinearLayout>